# r9s-python

./: .genignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  Makefile  README.md  USAGE.md  gen.yaml  main.py  pylintrc  pyproject.toml  relay-bundled.yaml  relay.yaml  test_multi_column.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pr-check.yml  sdk-publish-test.yml  sdk-publish.yml
blog/zh/: r9s_intro.md
docs/: MCP_SERVER_DESIGN.md  PRODUCT_OVERVIEW.md  PROMPT_VERSION_CONTROL_DESIGN.md  SKILLS_DESIGN.md  SKILL_SCRIPTS_SPEC.md  blog-agent-features-session.md  blog-agent-recipes-draft.md  bot-command-spec.md  cli-dev-guide.md  image-utilities-design.md  sdk-advanced.md  sdk-image-update-requirements.md  tool-adapter-dev-guide.md  web-ui.md
docs/errors/: authenticationerror.md  badrequesterror.md  error.md  internalservererror.md  notfounderror.md  permissiondeniederror.md  ratelimiterror.md  schemasbadrequesterrorerror.md  schemasbadrequesterrorstatus.md  schemaserror.md  schemasinternalservererrorerror.md  schemasinternalservererrorstatus.md  schemasnotfounderrorerror.md  schemasnotfounderrorstatus.md  schemasratelimiterrorerror.md  schemasratelimiterrorstatus.md  schemasserviceunavailableerrorerror.md  schemasserviceunavailableerrorstatus.md  schemasstatus.md  schemasunprocessableentityerrorerror.md  schemasunprocessableentityerrorstatus.md  serviceunavailableerror.md  status.md  unprocessableentityerror.md
docs/models/: anthropiccontent.md  (+205 more)
example/: audio.py  chat.py  chat_extension.py  completions.py  embeddings.py  image.py  messages.py  response.py
scripts/: commit_msg_check.py  version_bump_check.py
tests/: conftest.py  test_agent_models.py  test_agent_skills.py  test_agent_store.py  test_agent_template.py  test_agent_versioning.py  test_bot_create_interactive.py  test_bots_commands_toml.py  test_chat_piped_image.py  test_chat_resume_list_display.py  test_chat_slash_command.py  test_cli_parser.py  test_command_run.py  test_completion_cli.py  test_config_model_resolution.py  test_image_cli.py  test_image_constraints.py  test_image_edit.py  test_image_generation.py  test_models_cli_output.py  test_parallel.py  test_resume_ctrl_d.py  test_run_preflight_env_conflict.py  test_skill_cli_parser.py  test_skill_github.py  test_skill_loader.py  test_skill_local_store.py  test_skill_models.py  test_skill_parser.py  test_skill_validator.py  test_template_file_injection.py  test_template_renderer.py  test_web_model_filters.py
(+224 files in other folders)
